pages added and routes

--- a/src/app/payment-options/payment-options.page.html
+++ b/src/app/payment-options/payment-options.page.html
@@ -3,12 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Home
-    </ion-title>
+    <ion-title>payment-options</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  Display Maps
+<ion-content padding>
+
 </ion-content>
