--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,7 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+            <!-- <app-menu-item [link]="p"></app-menu-item> -->
             <app-menu-item [link]="p"></app-menu-item>
           </ion-menu-toggle>
         </ion-list>
