--- a/src/app/past-payments/past-payments.page.html
+++ b/src/app/past-payments/past-payments.page.html
@@ -3,10 +3,24 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>past-payments</ion-title>
+    <ion-title>Past Payments</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Ahmedabad - Surat</ion-card-title>
+      <ion-card-subtitle>{{today | date:'mediumDate'}}</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-label>Total Amount Paid: {{700 | currency:'INR'}}</ion-label><br>
+      <ion-label>Vehicle No: GJ01-EF3708</ion-label><br>
+      <ion-label>Single Journey</ion-label><br>
+      <ion-button expand="full">Mail Receipt <ion-icon name="send" slot="end"></ion-icon>
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
