--- a/src/app/pages/select-toll-plaza/select-toll-plaza.page.html
+++ b/src/app/pages/select-toll-plaza/select-toll-plaza.page.html
@@ -1,9 +1,10 @@
 <ion-header>
-    <ion-toolbar color=" --ion-color-primary-shade">
-        <ion-title style="color:white">Select Toll Plaza
-        </ion-title>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="home"></ion-back-button>
+        </ion-buttons>
+        <h3>Select Toll Plaza</h3>
     </ion-toolbar>
-
 </ion-header>
 
 <ion-content>
