payment method view

--- a/src/app/pages/payment-details/payment-details.page.html
+++ b/src/app/pages/payment-details/payment-details.page.html
@@ -60,11 +60,15 @@
             </tr>
         </ion-radio-group>
     </table>
+
+
+
+
     <table>
         <tr>
 
             <td>
-                <ion-button [routerLink]="['/payment-details-add']" style="position:fixed;width:50%;bottom:0;left:0" routerLinkActive="router-link-active">Next</ion-button>
+                <ion-button [routerLink]="['/view-payment-method']" style="position:fixed;width:50%;bottom:0;left:0" routerLinkActive="router-link-active">Next</ion-button>
             </td>
             <td>
                 <ion-fab-button color="primary" style="position:fixed;bottom:0;right:0px" [routerLink]="['/payment-details-add']">
