--- a/src/app/pages/select-toll-plaza/select-toll-plaza.page.html
+++ b/src/app/pages/select-toll-plaza/select-toll-plaza.page.html
@@ -33,22 +33,18 @@
     </ion-item>
     <br>
     <table>
-        <ion-radio-group>
+        <ion-radio-group [(ngModel)]="a">
             <tr>
                 <td>
                     <ion-item>
                         <i class="fas fa-motorcycle" style="font-size: 24px;"></i>
 
-
-                        <!-- <img src="../assets/icon/motorbike.png" alt=""> -->
                         <ion-radio slot="start" value="biff" checked></ion-radio>
                     </ion-item>
                 </td>
                 <td>
                     <ion-item>
                         <i class="fas fa-car" style="font-size: 24px;"></i>
-
-                        <!-- <img src="../assets/icon/car.png" alt="" style="height:50px;"> -->
                         <ion-radio slot="start" value="griff"></ion-radio>
                     </ion-item>
 
@@ -58,8 +54,6 @@
                 <td>
                     <ion-item>
                         <ion-icon name="bus" size="large" style="font-size:24px;color:black"></ion-icon>
-
-                        <!-- <img src="../assets/icon/delivery-truck.png" alt="" style="height:50px;"> -->
                         <ion-radio slot="start" value="giff" checked></ion-radio>
                     </ion-item>
                 </td>
@@ -67,7 +61,6 @@
                 <td>
                     <ion-item>
                         <i class="fas fa-truck" size="large" style="font-size:24px;"></i>
-                        <!-- <img src="../assets/icon/bus.png" alt="" style="height:50px;"> -->
                         <ion-radio slot="start" value="sniff" checked></ion-radio>
                     </ion-item>
                 </td>
@@ -77,8 +70,6 @@
                 <td>
                     <ion-item>
                         <i class="fas fa-truck-monster" style="font-size:24px;"></i>
-
-                        <!-- <img src="../assets/icon/motorbike.png" alt="" style="height:50px;"> -->
                         <ion-radio slot="start" value="riff" checked></ion-radio>
                     </ion-item>
                 </td>
@@ -87,9 +78,7 @@
                 <td>
                     <ion-item>
                         <i class="fas fa-truck-moving" style="font-size:24px;"></i>
-
-                        <!-- <img src="../assets/icon/motorbike.png" alt="" style="height:50px;"> -->
-                        <ion-radio slot="start" value="riff" checked></ion-radio>
+                        <ion-radio slot="start" value="ff" checked></ion-radio>
                     </ion-item>
                 </td>
             </tr>
