--- a/src/app/pages/edit-payment-details/edit-payment-details.page.html
+++ b/src/app/pages/edit-payment-details/edit-payment-details.page.html
@@ -7,41 +7,100 @@
     </ion-toolbar>
 </ion-header>
 <ion-content padding>
-    <ion-item>
-        <ion-input placeholder="Card Holder Name"> <i class="fa fa-user icon">  </i>&nbsp;&nbsp;</ion-input>
-    </ion-item>
-    <br>
-    <ion-item>
-        <ion-input placeholder="Card Number" type="number"> <i class="fa fa-key icon"></i> &nbsp;&nbsp;</ion-input>
-    </ion-item>
-    <br>
-    <ion-label>Expiry Date</ion-label>
-    <table>
+    <form [formGroup]="edit_payment_form" (ngSubmit)="submit()">
+        <!-- <ion-item>
+            <ion-label position="floating">Card Holder Name</ion-label>
+            <ion-input formControlName="card_holder_name" type="text" id="card_holder_name" name="card_holder_name"> <i
+                    class="fa fa-user icon"> </i>
+            </ion-input>
+           
+        </ion-item>
+        <div
+        *ngIf="!edit_payment_form.get('card_holder_name').valid && edit_payment_form.get('card_holder_name').touched ">
+        <div *ngIf="edit_payment_form.get('card_holder_name').hasError('required')">
+            Card Holder Name is must.</div>
+    </div> -->
+        <ion-item>
+            <ion-label position="floating">Card Name</ion-label>
+            <ion-input formControlName="card_name" type="text" id="card_name" name="card_name"> <i
+                    class="fa fa-user icon"> </i>
+            </ion-input>
+            
+        </ion-item>
+        <div *ngIf="!edit_payment_form.get('card_name').valid && edit_payment_form.get('card_name').touched ">
+                <div *ngIf="edit_payment_form.get('card_name').hasError('required')">
+                    Card Name is must.</div>
+            </div>
+        <br>
+        <ion-item>
+            <ion-label position="floating">Card Number</ion-label>
+            <ion-input formControlName="card_no" type="number" id="card_no" name="card_no"> <i
+                    class="fa fa-key icon"></i>
+            </ion-input>
+           
+        </ion-item>
+        <div *ngIf="!edit_payment_form.get('card_no').valid && edit_payment_form.get('card_no').touched ">
+                <div *ngIf="edit_payment_form.get('card_no').hasError('required')">
+                    Card Number is must.</div>
+                <div *ngIf="edit_payment_form.get('card_no').hasError('minLength')">
+                    Card Number is must of 12 digits.</div>
+                <div *ngIf="edit_payment_form.get('card_no').hasError('maxLength')">
+                    Card Number is must of 12 digits.</div>
 
-        <tr>
+                <div *ngIf="edit_payment_form.get('card_no').hasError('maxLength')">
+                    Card Number is must contain only digits.</div>
 
-            <td>
+            </div>
+        <br>
+        <ion-label>Expiry Date</ion-label>
+        <table>
+            <tr>
+                <td>
+                    <ion-item>
+                        <ion-label position="floating">Expiry Month</ion-label>
+                        <ion-input type="number" formControlName="expiry_m" name="expiry_m" id="expiry_m"></ion-input>
+                    </ion-item>
+                    <div *ngIf="!edit_payment_form.get('expiry_m').valid && edit_payment_form.get('expiry_m').touched ">
+                        <div *ngIf="edit_payment_form.get('expiry_m').hasError('required')">
+                            Expiry Month is must.</div>
+                        <div *ngIf="edit_payment_form.get('expiry_m').hasError('min')">
+                            Expiry Month must between 1 to 12</div>
+                        <div *ngIf="edit_payment_form.get('expiry_m').hasError('max')">
+                            Expiry Month must between 1 to 12</div>
+                    </div>
+                </td>
+                <td>
+                    <ion-item>
+                        <ion-label position="floating">Expiry Year</ion-label>
+                        <ion-input type="number" formControlName="expiry_y" name="expiry_y" id="expiry_y"></ion-input>
+                        
+                    </ion-item>
+                    <div
+                            *ngIf="!edit_payment_form.get('expiry_y').valid && edit_payment_form.get('expiry_y').touched ">
+                            <div *ngIf="edit_payment_form.get('expiry_y').hasError('required')">
+                                Expiry Month is must.</div>
+                            <div *ngIf="edit_payment_form.get('expiry_y').hasError('min')">
+                                Expiry Year must between 19 to 25</div>
+                            <div *ngIf="edit_payment_form.get('expiry_y').hasError('max')">
+                                Expiry Year must between 19 to 25</div>
+                        </div>
+                </td>
+            </tr><br>
+            <tr>
                 <ion-item>
-                    <ion-input type="text" placeholder="MM" name="psw"></ion-input>
+                    <ion-select formControlName="method_type" [compareWith]="compareFn" id="method_type" name="method_type">
+                        <ion-select-option value="{{i.method_id}}" *ngFor="let i of paymentMethods">
+                            {{i.method_name}}</ion-select-option> 
+                    </ion-select>
                 </ion-item>
-            </td>
-            <td>
-                <ion-item>
-                    <ion-input type="text" placeholder="YY" name="psw"></ion-input>
-                </ion-item>
-            </td>
-
-
-        </tr><br>
-        <ion-label>Cvv Code</ion-label>
-        <tr>
-            <td>
-
-                <ion-item>
-                    <ion-input type="text" placeholder="Cvv" name="psw"></ion-input>
-                </ion-item>
-            </td>
-        </tr>
-    </table>
-    <ion-button [routerLink]="['/view-payment-method']" style="position:fixed;width:100%;bottom:0;left:0" routerLinkActive="router-link-active">Update</ion-button>
+                <div
+                    *ngIf="!edit_payment_form.get('method_type').valid && edit_payment_form.get('method_type').touched ">
+                    <div *ngIf="edit_payment_form.get('method_type').hasError('required')">
+                        Payment Method Type is must.</div>
+                </div>
+            </tr>
+        </table>
+        <ion-button [disabled]="!edit_payment_form.valid" style="position:fixed;width:100%;bottom:0;left:0" routerLinkActive="router-link-active" (click)="submit()"
+            type="submit">Update</ion-button>
+    </form>
 </ion-content>
