hashing done in login and signup

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -22,7 +22,7 @@
     </div>
   <ion-item>
     <ion-label position="floating">Password</ion-label>
-    <ion-input formControlName="password1" type="text"  id="password1" [(ngModel)]="password1"></ion-input>
+    <ion-input formControlName="password1" type="password"  id="password1" [(ngModel)]="password1"></ion-input>
   </ion-item>
   <br>
     <div *ngIf="!loginform.controls.password1.valid &&
