--- a/src/app/login/signup/signup.page.html
+++ b/src/app/login/signup/signup.page.html
@@ -32,7 +32,7 @@
     </div>
     <ion-item>
       <ion-icon name="lock" item-start></ion-icon>
-      <ion-input placeholder="Enter Password" formControlName="password1" type="text" id="password1" [(ngModel)]="password1"></ion-input>
+      <ion-input placeholder="Enter Password" formControlName="password1" type="password" id="password1" [(ngModel)]="password1"></ion-input>
     </ion-item>
     <br>
     <div *ngIf="!myform.controls.password1.valid &&
